# spr-cli

./: Cargo.toml  README.md
src/: main.rs  runtime.rs
src/pallets/: autonomy.rs  mod.rs
