[package]
name = "spr-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
substrate-subxt = {git = "https://github.com/paritytech/substrate-subxt"}
async-std = {version = "1.9.0", features = ["attributes", "tokio1"]}
async-trait = "0.1.50"
sp-core = "3.0.0"
sp-runtime = "3.0.0"